[package]
name = "dwrs-metrics"
version = "0.1.0"
authors = ["Abe Friesen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
metrics = { version = "0.12.1", features = ["std"]}
metrics-core = "0.5.2"
gethostname = "0.2.1"
config = { version = "0.10.1", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }