[package]
name = "fluxite"
version = "0.1.0"
authors = ["Abe Friesen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
hdrhistogram = "*"
metrics-util = "0.3.1"
metrics = { version = "0.12.1", features = ["std"]}
metrics-core = "0.5.2"
config = { version = "*", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.metrics-runtime]
version = "0.12.1"
default-features = false
