[package]
name = "fluxite"
version = "0.1.0"
authors = ["Abe Friesen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
config = { version = "*", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5.4"

[dependencies.fluxite_macro]
path = "./fluxite_macro"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "fluxite_benchmark"
harness = false
